--- a/template.yaml
+++ b/template.yaml
@@ -1,22 +1,24 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Combined SAM Template for Lambda function and API Gateway
+
 Globals:
   Function:
     Timeout: 30
     MemorySize: 256
+
 Resources:
   MyLambdaFunction:
-    Type: AWS::Lambda::Function
+    Type: AWS::Serverless::Function
     Properties:
       Handler: comment_analysis.lambda_handler
-      Runtime: python3.12
+      Runtime: python3.11  # Updated to a supported version
       Role: !GetAtt LambdaExecutionRole.Arn
       FunctionName: jira-analysis
       Description: My Lambda function
-      Code:
-        S3Bucket: lambda-code-zipfile-bucket
-        S3Key: comment_analysis.zip
+      CodeUri:
+        Bucket: lambda-code-zipfile-bucket  # Specify S3 bucket
+        Key: comment_analysis.zip          # Specify S3 key
       Environment:
         Variables:
           SNS_TOPIC_ARN: !Ref JiraAnalysisTopic
@@ -36,40 +38,45 @@ Resources:
       Policies:
         - PolicyName: ComprehendPolicy
           PolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Action: comprehend:DetectSentiment
-              Resource: "*"
-
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action: comprehend:DetectSentiment
+                Resource: "*"
         - PolicyName: SNSNotificationPolicy
           PolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Action: sns:Publish
-              Resource: !Ref JiraAnalysisTopic
-
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action: sns:Publish
+                Resource: !Ref JiraAnalysisTopic
         - PolicyName: BedrockPolicy
           PolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Action: 
-                - bedrock:ListFoundationModels
-                - bedrock:GetFoundationModel
-                - bedrock:InvokeModel
-              Resource: "*"
-    Metadata:
-      SamResourceId: MyLambdaFunction
-      Dependencies:
-        - requests
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action: 
+                  - bedrock:ListFoundationModels
+                  - bedrock:GetFoundationModel
+                  - bedrock:InvokeModel
+                Resource: "*"
+        - PolicyName: CloudWatchLogsPolicy  # Added CloudWatch Logs permissions
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:PutLogEvents
+                Resource: arn:aws:logs:*:*:log-group:/aws/lambda/jira-analysis*
 
   JiraAnalysisTopic:
     Type: AWS::SNS::Topic
     Properties:
       DisplayName: Jira Analysis Topic
       TopicName: jira-analysis-topic
+
   MyApiGateway:
     Type: AWS::Serverless::Api
     Properties:
@@ -88,18 +95,22 @@ Resources:
                 passthroughBehavior: when_no_match
                 httpMethod: POST
                 type: aws_proxy
-    Metadata:
-      SamResourceId: MyApiGateway
+
   MyLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: /aws/lambda/jira-analysis
-    Metadata:
-      SamResourceId: MyLogGroup
+      RetentionInDays: 14  # Optional: Specify how long to retain logs
+
   LambdaInvokePermission:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
       FunctionName: !GetAtt MyLambdaFunction.Arn
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${MyApiGateway}/*/*/jira-analysis"
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${MyApiGateway}/*/*"
+
+Outputs:
+  ApiUrl:
+    Description: "API Gateway endpoint URL for Prod stage"
+    Value: !Sub "https://${MyApiGateway}.execute-api.${AWS::Region}.amazonaws.com/Prod/jira-analysis"
